header and menu done

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -2,8 +2,12 @@ doctype html
 html(lang='ru')
   include templates/_head
   body
-    include templates/_main
+    include templates/_mainContent
     include templates/_footer
     script(src='bower_components/jquery/dist/jquery.min.js')
     script(src='bower_components/owl.carousel/dist/owl.carousel.min.js')
     script(src='bower_components/jquery-mask-plugin/dist/jquery.mask.min.js')
+    script(src='js/MenuItem.es6.js')
+    script(src='js/MainMenu.es6.js')
+    script(src='js/SubMenu.es6.js')
+    script(src='js/main.es6.js')
