--- a/app/pug/templates/_header.pug
+++ b/app/pug/templates/_header.pug
@@ -1,2 +1,14 @@
-header.header
-  
+header.headerWrap
+  .content
+    .headerTop
+      a(href='#').logoFull
+        figure
+          img(src='../img/boltLogo.png', alt='logo')
+          figcaption
+            h2 Best
+              span Electric
+            span электромонтажные работы
+      .headerContacts
+        p.city Санкт-Петербург
+        p.phone
+          a(href='tel:+78156587878') 658-78-78
