mobile menu done

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -4,7 +4,9 @@ html(lang='ru')
   body
     include templates/_mainContent
     include templates/_footer
+    include templates/_mobileMenu
     script(src='bower_components/jquery/dist/jquery.min.js')
+    script(src='bower_components/jquery-ui/jquery-ui.min.js')
     script(src='bower_components/owl.carousel/dist/owl.carousel.min.js')
     script(src='bower_components/jquery-mask-plugin/dist/jquery.mask.min.js')
     script(src='js/MenuItem.es6.js')
