--- a/app/pug/templates/_head.pug
+++ b/app/pug/templates/_head.pug
@@ -4,7 +4,11 @@ head
   name='viewport'
   content='width=device-width, initial-scale=1'
   )
-  title bestElectric | Электромонтажные работы
+  title GrandElectric | Электромонтажные работы
+  link(
+  rel="stylesheet"
+  href="bower_components/fontawesome/css/all.min.css"
+  )
   link(
   rel="stylesheet"
   href="bower_components/owl.carousel/dist/assets/owl.carousel.min.css"
