--- a/app/pug/templates/_header.pug
+++ b/app/pug/templates/_header.pug
@@ -1,13 +1,15 @@
 header.headerWrap
-  .content
+  .contentWidth
     .headerTop
       a(href='#').logoFull
         figure
           img(src='../img/boltLogo.png', alt='logo')
           figcaption
-            h2 Best
+            h2 Grand
               span Electric
             span электромонтажные работы
+      nav#mainMenu
+      button#mobileMenuBtn
       .headerContacts
         p.city Санкт-Петербург
         p.phone
