--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -1,47 +1,91 @@
 .headerWrap
-  background-color: rgba(255, 255, 255, 0.6)
+  background-color: rgba(255, 255, 255, 0.8)
+  position: fixed
+  width: 100%
 
 .headerTop
-  height: 100px
+  height: 80px
   display: flex
   align-items: center
   justify-content: space-between
+  flex-wrap: wrap
 
   .logoFull
     text-decoration: none
     color: $darkFontColor
     figure
       display: flex
+      align-items: center
       figcaption
         display: flex
         flex-direction: column
         justify-content: center
         font-family: Tahoma, sans-serif
-        margin-left: 15px
+        margin-left: 10px
         h2
-          font-size: 9.29rem
+          font-size: 7rem
           font-weight: normal
-          line-height: 7.6rem
+          line-height: 6rem
           span
             font-weight: bold
         >span
-          font-size: 4.12rem
+          font-size: 3.53rem
           position: relative
-          left: 5px
+          left: 3px
           color: #3f3f3f
 
+  .mainMenu
+    list-style-type: none
+    display: flex
+    align-items: center
+    font-size: 4rem
+    justify-content: space-between
+
+    >li
+      position: relative
+      line-height: 40px
+      border-bottom: transparent 2px solid
+      margin-left: 20px
+      &:hover
+        border-bottom: $darkFontColor 2px solid
+        >a
+          color: $secondColor
+          font-weight: bold
+    li.active>a
+      color: $secondColor
+    a
+      text-decoration: none
+      color: $darkFontColor
+
+    .mainMenuSub
+      position: absolute
+      top: 42px
+      left: -13px
+      background-color: rgba(247, 247, 247, 0.6)
+      list-style-type: none
+      font-size: 3rem
+      box-sizing: padding-box
+      padding: 10px 15px
+      white-space: nowrap
+      border-radius: 3px
+      line-height: 5rem
+      display: none
+      box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.4)
+      >li:hover
+        text-decoration: underline
+
+  #mobileMenuBtn
+    display: none
+
   .headerContacts
-    p
-      text-align: right
-      line-height: 7rem
     .city
-      font-size: 4.29rem
+      font-size: 4rem
+      line-height: 5rem
+      text-align: right
     .phone
       a
-        font-size: 9.71rem
+        font-size: 8rem
         color: $darkFontColor
         font-weight: bold
         text-decoration: none
-        line-height: 8rem
-
-
+        line-height: 6rem
