--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,7 +1,8 @@
 @import fontface
 @import vars
 @import header
-@import mainMenu
+@import offer
+@import mobileMenu
 
 *
   box-sizing: border-box
@@ -17,12 +18,24 @@ html
   font-size: 5px
   color: $darkFontColor
 
+body
+  overflow: hidden
+
+button
+  border: 0
+  outline: 0
+
 .mainContent
   height: calc(100%)
 
 .content
   max-width: $siteWidth
   padding: 0 1%
+  margin: 0 auto
+  width: 100%
+
+.contentWidth
+  width: 95%
   margin: 0 auto
 
 .bgTop
@@ -33,4 +46,15 @@ html
   background: url("../img/bgTop.jpg") top right no-repeat
   background-size: cover
 
-@import mw800
+#mobileMenuContentMask
+  display: none
+  width: 100vw
+  height: 100vh
+  position: fixed
+  top: 0
+  left: 0
+  z-index: 100
+  background-color: rgba(0, 0, 0, 0.85)
+
+@import mw1000
+@import mw600
