--- a/app/pug/templates/_services.pug
+++ b/app/pug/templates/_services.pug
@@ -1,10 +1,110 @@
 section.servicesWrap
-  .content
-    .servicesPrice#servicesTabs
-      ul.servicesPriceNav
-        li
-          a(href='servicesTabs1')
-            figure
-              .imgContainer
-                img(src='')
-              figcaption Проводка<br>в&nbsp;квартире<br>и&nbsp;в&nbsp;доме
+  #servicesTabs
+    .servicesPriceNavBg
+      .content
+        ul.servicesPriceNav
+          li
+            a(href='#servicesTabs1')
+              figure
+                .imgContainer.imgContainer__1
+                  img(src='img/servicesComplex.png')
+                figcaption Проводка<br>в&nbsp;квартире<br>и&nbsp;в&nbsp;доме
+          li
+            a(href='#servicesTabs2')
+              figure
+                .imgContainer.imgContainer__2
+                  img(src='img/servicesTools.png')
+                figcaption Установка<br>электро-<br>приборов
+          li
+            a(href='#servicesTabs3')
+              figure
+                .imgContainer.imgContainer__3
+                  img(src='img/servicesCommercial.png')
+                figcaption Коммерческая<br>электрика
+    .servicesTabs
+        article.servicesTab#servicesTabs1
+          .content
+            h2 Устройство электропроводки
+            .servicesTabContent
+              #accordion
+                h3 Проводка
+                .miniPrice
+                  table(border=0, cellspacing=0, cellpadding=0)
+                    tr
+                      each val in ['Штробление','150', 'м.кв']
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                h3 Штробление
+                .miniPrice
+                  table(border=0, cellspacing=0, cellpadding=0)
+                    tr
+                      each val in ['Штробление','150', 'м.кв']
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                h3 Щитовое оборудование
+                .miniPrice
+                  table(border=0, cellspacing=0, cellpadding=0)
+                    tr
+                      each val in ['Штробление','150', 'м.кв']
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+                    tr
+                      each val in ['Штробление','150',"м.кв"]
+                        td= val
+
+        .servicesTab#servicesTabs2
+          .content
+            h2 Установка электроприборов
+            .servicesTabContent
+        .servicesTab#servicesTabs3
+          .content
+            h2 Коммерческая электрика
+            .servicesTabContent
