--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -12,4 +12,5 @@ html(lang='ru')
     script(src='js/MenuItem.es6.js')
     script(src='js/MainMenu.es6.js')
     script(src='js/SubMenu.es6.js')
+    script(src='js/BubblyButton.es6.js')
     script(src='js/main.es6.js')
