services & servicesBig become responsive

--- a/app/pug/templates/_header.pug
+++ b/app/pug/templates/_header.pug
@@ -3,7 +3,7 @@ header.headerWrap#header
     .headerTop
       a(href='#').logoFull
         figure
-          img(src='../img/boltLogo.png', alt='logo')
+          img(src='../img/boltLogo.png', alt='logo').animate
           figcaption
             h2 Grand
               span Electric
