--- a/app/pug/templates/_services.pug
+++ b/app/pug/templates/_services.pug
@@ -19,7 +19,7 @@ section.servicesWrap
             figure
               .imgContainer.imgContainer__3
                 img(src='img/servicesCommercial.png')
-              figcaption Коммерческая<br>электрика
+              figcaption Коммер-<br>ческая<br>электрика
             a(href='#servicesTabs3').labelScreen
     .servicesTabs
       article.servicesTab#servicesTabs1
