--- a/app/pug/templates/_servicesBig.pug
+++ b/app/pug/templates/_servicesBig.pug
@@ -1,4 +1,4 @@
-section.servicesBig
+section.servicesBigWrap
   article.servicesBigArticle.servicesBigArticle__housesAppartments
     h2 Выполняем под ключ
     .content
@@ -13,14 +13,12 @@ section.servicesBig
             li Сборка щита
         .bottom
           .infographics
-            .inner
               figure
                 img(src='../img/specialistIcon.png')
                 figcaption
                   h5 Выполнено:
                   span.number 24
                   span.label объекта
-            .inner
               figure
                 img(src='../img/moneyIcon.png')
                 figcaption
@@ -31,8 +29,7 @@ section.servicesBig
             button.button.button__servicesBig.button__grey Цены
             button.button.button__servicesBig.button__grey Портфолио
             button.button.button__servicesBig.button__bubblyButton Заказть
-      .right
-        img(src="../img/servicesBigHouseApartmentsImg.jpg", alt="Электропроводка в квартире и доме")
+      .right.img1
         .imgMask
           span  Посмотреть другие работы
 
@@ -49,14 +46,12 @@ section.servicesBig
             li Сборка щита
         .bottom
           .infographics
-            .inner
               figure
                 img(src='../img/specialistIcon.png')
                 figcaption
                   h5 Выполнено:
                   span.number 24
                   span.label объекта
-            .inner
               figure
                 img(src='../img/moneyIcon.png')
                 figcaption
@@ -67,8 +62,7 @@ section.servicesBig
             button.button.button__servicesBig.button__white Цены
             button.button.button__servicesBig.button__white Портфолио
             button.button.button__servicesBig.button__bubblyButton.animate Заказть
-      .right
-        img(src="../img/servicesBigWoodenHousesImg.jpg", alt="Проводка в дервянном доме")
+      .right.img2
         .imgMask
           span  Посмотреть другие работы
   article.servicesBigArticle.servicesBigArticle__commercial
@@ -85,14 +79,12 @@ section.servicesBig
             li Сборка щита
         .bottom
           .infographics
-            .inner
               figure
                 img(src='../img/specialistIcon.png')
                 figcaption
                   h5 Выполнено:
                   span.number 24
                   span.label объекта
-            .inner
               figure
                 img(src='../img/moneyIcon.png')
                 figcaption
@@ -103,7 +95,6 @@ section.servicesBig
             button.button.button__servicesBig.button__white Цены
             button.button.button__servicesBig.button__white Портфолио
             button.button.button__servicesBig.button__bubblyButton.animate Заказть
-      .right
-        img(src="../img/servicesBigCommercialImg.jpg", alt="Электропроводка на коммерческих объектах")
+      .right.img3
         .imgMask
           span  Посмотреть другие работы
