--- a/app/sass/_header.sass
+++ b/app/sass/_header.sass
@@ -1,5 +1,5 @@
 .headerWrap
-  background-color: rgba(255, 255, 255, 0.8)
+  background-image: linear-gradient(to bottom, #ffffff, #ffffff, #fefefe, #fefefe, #fdfdfd, #fdfdfd, #fcfcfc, #fcfcfc, #fcfcfc, #fcfcfc, #fcfcfc, #fcfcfc)
   position: fixed
   width: 100%
   z-index: 299
@@ -54,8 +54,6 @@
         transform: translateY(-3px)
         >a
           color: $secondColor
-
-          //font-weight: bold
     li.active>a
       color: $secondColor
     a
