--- a/app/sass/_services.sass
+++ b/app/sass/_services.sass
@@ -2,12 +2,11 @@
   background-image: linear-gradient(to top, rgb(51, 50, 50), rgba(51, 50, 50, 0.99), rgba(51, 50, 50, 0.97), rgba(51, 50, 50, 0.95), rgba(51, 50, 50, 0.9), rgba(51, 50, 50, 0.8), rgba(51, 50, 50, 0.7), rgba(51, 50, 50, 0.5), rgba(51, 50, 50, 0.2), rgba(51, 50, 50, 0))
 
 .servicesPriceNav
-  height: 140px
   display: flex
   justify-content: space-between
   align-items: center
   li
-    transition: transform ease-in 100ms
+    transition: transform ease-out 200ms
     position: relative
     display: block
     &:hover
@@ -43,7 +42,6 @@
         display: flex
         align-items: center
         margin-left: 3rem
-
   .labelScreen
     display: block
     position: absolute
