--- a/app/sass/_keyframes.sass
+++ b/app/sass/_keyframes.sass
@@ -8,7 +8,6 @@
     background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%
     background-size: 0% 0%, 0% 0%,  0% 0%,  0% 0%,  0% 0%,  0% 0%
 
-
 @keyframes bottomBubbles
   0%
     background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%
@@ -18,4 +17,11 @@
   100%
     background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%
     background-size: 0% 0%, 0% 0%,  0% 0%,  0% 0%,  0% 0%,  0% 0%
+
+@keyframes flip-vertical-right
+  0%
+    transform: rotateY(0)
+  100%
+    transform: rotateY(360deg)
+
 
