--- a/app/sass/_servicesBig.sass
+++ b/app/sass/_servicesBig.sass
@@ -1,17 +1,18 @@
-.servicesBig
-  padding-top: 40px
-  h2
-    padding-bottom: 40px
+.servicesBigWrap
   .servicesBigArticle
     padding: 40px 0
+    h2
+      margin-bottom: 40px
     &__housesAppartments
       background: url("../img/servicesBigHousesAppartmentsBg.png") left 40% bottom no-repeat
-      padding-top: 0
+      background-size: contain
     &__woodenHouses
       background: #5e5249 url("../img/servicesBigWoodenHousesBg.png") left 40% bottom no-repeat
+      background-size: contain
       color: white
     &__commercial
       background: $darkBgColor url("../img/servicesBigCommercialBg.png") left 40% bottom no-repeat
+      background-size: contain
       color: white
     .content
       display: flex
@@ -42,15 +43,17 @@
           display: flex
           justify-content: space-between
           margin-bottom: 3rem
-          .inner
-            width: 50%
           figure
+            width: 50%
             display: flex
+            align-items: flex-end
             img
               margin-right: 2rem
+              width: 30%
           figcaption
             display: flex
             flex-wrap: wrap
+            white-space: nowrap
             h5
               font-size: 3.86rem
               font-weight: bold
@@ -62,9 +65,9 @@
               font-size: 9.29rem
               color: #ff7c5b
               font-weight: bold
-              line-height: 7rem
+              line-height: 8rem
             .label
-              margin-left: 1rem
+              margin-left: 0.1rem
               font-size: 3.43rem
               font-weight: bold
         .buttons
@@ -74,22 +77,22 @@
     .right
       width: 49%
       position: relative
-      &:hover>img
+      box-shadow: 0 0 16px rgba(0, 0, 0, 0.23)
+      transition: all ease-out 300ms
+      &.img1
+        background: url("../img/servicesBigHouseApartmentsImg.jpg") center bottom no-repeat
+        background-size: cover
+      &.img2
+        background: url("../img/servicesBigWoodenHousesImg.jpg") center bottom no-repeat
+        background-size: cover
+      &.img3
+        background: url("../img/servicesBigCommercialImg.jpg") center bottom no-repeat
+        background-size: cover
+      &:hover
         transform: scale(1.02)
         box-shadow: 0 0 30px rgba(0, 0, 0, 0.5)
       &:hover>.imgMask
-        transform: scale(1.02)
         opacity: 1
-      &:hover>span
-        border-color: #afafaf
-        color: #afafaf
-      &:active>span
-        border-color: #ffffff
-        color: #ffffff
-      img
-        box-shadow: 0 0 16px rgba(0, 0, 0, 0.23)
-        transition: all ease-out 300ms
-        width: 100%
 
       .imgMask
         opacity: 0
