Modal portfolio done, responsive view change point moved from 600px to 850px

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -5,6 +5,7 @@ html(lang='ru')
     include templates/_mainContent
     include templates/_footer
     include templates/_mobileMenu
+    #modalPortfolioScreen
     script(src='bower_components/jquery/dist/jquery.min.js')
     script(src='bower_components/jquery-ui/jquery-ui.min.js')
     script(src='bower_components/owl.carousel/dist/owl.carousel.min.js')
@@ -13,4 +14,5 @@ html(lang='ru')
     script(src='js/MainMenu.es6.js')
     script(src='js/SubMenu.es6.js')
     script(src='js/BubblyButton.es6.js')
+    script(src='js/PortfolioModal.es6.js')
     script(src='js/main.es6.js')
