--- a/app/sass/_offer.sass
+++ b/app/sass/_offer.sass
@@ -9,4 +9,4 @@
     line-height: 13rem
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000
     span
-      font-size: 11.8rem
+      font-size: 0.81em
