--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -5,6 +5,7 @@
 @import services
 @import servicesBig
 @import mobileMenu
+@import modalPortfolio
 
 *
   box-sizing: border-box
@@ -31,6 +32,8 @@ h2
 button
   border: 0
   outline: 0
+  font-family: "PT Sans", sans-serif
+  letter-spacing: 0.1rem
 
 .mainContent
   height: calc(100%)
@@ -38,7 +41,7 @@ button
 .content
   width: 100%
   max-width: $siteWidth
-  padding: 0 1%
+  padding: 0 2%
   margin: 0 auto
 
 .contentWide
@@ -148,4 +151,4 @@ button
 
 @import keyframes
 @import mw1000
-@import mw600
+@import mw850
