--- a/app/sass/_mw850.sass
+++ b/app/sass/_mw850.sass
@@ -1,16 +1,20 @@
-@media screen and (max-width: 600px)
+@media screen and (max-width: 850px)
 
   html
     font-size: 4px
+
+  .button
+    &__bubblyButton.animate
+      &:before, &:after
+        background-image: none
+        display: none
 
   .headerTop
     .logoFull
       flex-grow: 0
       order: 1
-
     .mobileMenuContainer
       width: 100%
-
     .headerContacts
       display: flex
       justify-content: space-between
@@ -21,6 +25,10 @@
         font-size: 5rem
         line-height: 4rem
         margin-left: 5px
+
+  .offerWrap
+    h2
+      font-size: 6rem
 
   .servicesWrap
     .servicesPriceNav
@@ -85,7 +93,6 @@
                     line-height: 5.2rem
                   .label
                     font-size: 2.5rem
-
         .right
           width: 100%
-          height: 200px
+          height: 300px
