Mobile menu hides when menu item selected

--- a/app/sass/_mobileMenu.sass
+++ b/app/sass/_mobileMenu.sass
@@ -57,6 +57,7 @@
         padding: 0 8%
         line-height: 7rem
         white-space: nowrap
+        display: block
       ul.mobileMenuSub
         display: none
         list-style-type: none
