--- a/app/sass/_modalPortfolio.sass
+++ b/app/sass/_modalPortfolio.sass
@@ -125,10 +125,8 @@
       padding: 15px 0 0 0
       position: relative
       .pm-close
-        top: 2%
-        right: 2%
-        width: 15px
-        height: 15px
+        top: 10px
+        right: 10px
       .pm-header
         h2
           margin-bottom: 20px
@@ -156,8 +154,10 @@
       height: 100%
       padding: 0
       .pm-close
-        top: 2%
-        right: 2%
+        width: 5rem
+        height: 5rem
+        top: 5px
+        right: 5px
         z-index: 991
       .pm-header
         position: absolute
@@ -168,8 +168,9 @@
           font-size: 5rem
           font-weight: normal
           margin-bottom: 0
-          line-height: 7rem
+          line-height: 5rem
           letter-spacing: 0.3rem
+          padding: 5px 0
         ul
           display: none
       .pm-carousel-container
